Fixed scrollbars

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -155,27 +155,18 @@ ul{
 }
 
 ::-webkit-scrollbar{
-      background: color(cta);
+    //   background: transparent;
       width: 20px;
-      padding: 5px;
 } 
 
-::-webkit-scrollbar-button{
-    background: skyblue;
-}
-
-::-webkit-scrollbar-button:hover{
-    background: rgb(19, 97, 128);
+::-webkit-scrollbar-thumb{
+    background: color(primary);
+    border: 2px solid transparent;
+    background-clip: content-box;
 }
 
 ::-webkit-scrollbar-track{
-    background: color(primary-lighten);
-    border-radius: 10px;
-    height: 20px;
-}
-
-::-webkit-scrollbar-thumb:hover{
-    background: color(white);
+    background: color(accent);
 }
 
 html,body{
@@ -345,10 +336,20 @@ footer{
 @media (max-width:700px) {
 
     ::-webkit-scrollbar{
-        background: color(cta);
+        // background: transparent;
         width: 5px;
-        padding: 5px;
-  } 
+    } 
+
+    ::-webkit-scrollbar-track{
+        background: color(cta);
+    }
+
+    ::-webkit-scrollbar-thumb{
+        background: color(accent);
+        // border: 2px solid transparent;
+        // background-clip: content-box;
+    }
+
     
     header{
         margin: 0;
